force-app/main/default/objects/clariti__Gateway_Transaction_Sync_Job__c/clariti__Gateway_Transaction_Sync_Job__c.object-meta.xml
<CustomObject>
    <label>Gateway Transaction Sync Job</label>
    <nameField>
        <displayFormat>GTSJ-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gateway Transaction Sync Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>