force-app/main/default/objects/clariti__Gateway_Transaction_Sync_Job__c/fields/clariti__Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>clariti__Completion_Date__c</fullName>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>