force-app/main/default/objects/clariti__Gateway_Transaction_Sync_Job__c/fields/clariti__Details__c.field-meta.xml
<CustomField>
    <fullName>clariti__Details__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>