force-app/main/default/objects/clariti__Gateway_Transaction_Sync_Job__c/fields/clariti__Status__c.field-meta.xml
<CustomField>
    <fullName>clariti__Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Succeeded</fullName>
            </value>
            <value>
                <fullName>With Errors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>